--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
         "xmemory": "c",
         "xutility": "c",
         "bit.h": "c",
-        "cache.h": "c"
+        "cache.h": "c",
+        "vmm.h": "c",
+        "iommu.h": "c"
     }
 }
