Creation of the aarch32, aarch64 & common folders. Changes to the boot.s file to adapt it to the Cortex-R52

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "bit.h": "c",
         "cache.h": "c",
         "vmm.h": "c",
-        "iommu.h": "c"
+        "iommu.h": "c",
+        "config.h": "c"
     }
 }
